# sql_agent_training

./: .gitignore  README.md  pyproject.toml
sql_agent_training/: README.md  pyproject.toml  sql-agent-verl-migration-plan.md
sql_agent_training/configs/: agent_eval.qwen25_coder_7b_lora.yaml  agent_eval.yaml  agent_eval_256.yaml  agent_eval_512.yaml  agent_grpo.autodl.yaml  agent_grpo.local_dryrun.yaml  agent_grpo.yaml  grpo.local_dryrun.yaml  grpo.qwen25_coder_7b_lora_h100.yaml  grpo.qwen_200steps_a100.yaml  grpo.qwen_20steps.yaml  grpo.qwen_20steps_a100.yaml  grpo.qwen_20steps_l40s.yaml  grpo.qwen_smoke.yaml  grpo.yaml  pipeline.autodl.yaml  pipeline.local_dryrun.yaml  pipeline.yaml  sft.a100.yaml  sft.autodl.yaml  sft.local_dryrun.yaml  sft.local_smoke.yaml  sft.qwen25_coder_7b_lora.a100.yaml  sft.yaml  verl_sql_agent_loop.yaml
sql_agent_training/docs/: autodl-runbook.md  verl-agent-loop-spike.md
sql_agent_training/scripts/: __init__.py  analyze_grpo_rollouts.py  autodl_bootstrap.sh  download_model.py  download_spider_assets.py  eval_spider.py  prepare_spider.py  prepare_verl_spider.py  probe_verl_agent_loop.py  start_monitors.ps1
sql_agent_training/sql_agent_training/: __init__.py
sql_agent_training/tests/: test_agent_actions.py  test_agent_eval.py  test_grpo_batch.py  test_grpo_entrypoint.py  test_grpo_rollouts.py  test_grpo_train.py  test_grpo_trainer.py  test_hf_tokenizer_adapter.py  test_model_client.py  test_prepare_spider.py  test_prepare_verl_spider.py  test_run_pipeline.py  test_schema_and_sft.py  test_sft_dataset.py  test_sft_entrypoint.py  test_sft_eval.py  test_spider_reward.py  test_sql_agent_loop.py  (+5 more)
(+32 files in other folders)
